<resources>
    <string name="app_name">CyberSail</string>
    <string name="searchEditText">Enter search or web address</string>
    <string name="go_btn">Go button</string>
    <string name="settings_btn">Settings</string>
    <string name="search_hint">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="settings">Settings</string>
    <string name="homePage">HomePage</string>
    <string name="bookmark">Bookmark</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="fullscreen">Full-Size</string>
    <string name="save">Save</string>
    <string name="desktop">Desktop</string>
    <string name="bookmark_name">Bookmark Name</string>
    <string name="view_all">View All</string>
    <string name="all_bookmark">All Bookmark</string>
    <string name="refresh_button">Refresh Button</string>
    <string name="one">1</string>
</resources>